# waysip

libwaysip/: Cargo.toml
libwaysip/src/: dispatch.rs  gui_selector.rs  iced_selector.rs  lib.rs  state.rs
waysip/src/: main.rs
