[package]
name = "libwaysip"
description = "Wayland native (zwlr_layer_shell) area selection client lib"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
readme.workspace = true

[dependencies]
tempfile = "3.24.0"
wayland-client = "0.31.11"
wayland-cursor = "0.31.11"

wayland-protocols = { version = "0.32.9", default-features = false, features = [
	"unstable",
	"staging",
	"client",
] }

wayland-protocols-wlr = { version = "0.3.9", default-features = false, features = [
	"client",
] }

cairo-rs = "0.21.1"
pango = "0.21.1"
pangocairo = "0.21.1"

memmap2 = "0.9.7"
thiserror = "2.0.14"

iced = { version = "0.14", features = ["image"], optional = true }
iced_runtime = { version = "0.14", optional = true }
iced_layershell = { git = "https://github.com/waycrate/exwlshelleventloop", branch = "master", optional = true }
libwayshot = { git = "https://github.com/waycrate/wayshot", branch = "main", optional = true }
image = { version = "0.25", default-features = false, optional = true }
futures-channel = { version = "0.3.31", optional = true }

[features]
gui = ["dep:iced", "dep:iced_runtime", "dep:iced_layershell", "dep:libwayshot", "dep:image", "dep:futures-channel"]
